# SpaGRN

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  stereo_seq_mouse_brain_low-res.ipynb  test_grnboost2.py  test_scoexp.py
RecTFinference/: README.md
docs/: .requirements.txt.swp  requirements.txt
docs/source/: conf.py  index.rst
docs/source/Tutorials/: Preprocess.rst  data1.rst  data2.rst  index.rst  stereo_seq_mouse_brain_hi-res.ipynb  stereo_seq_mouse_brain_low-res.ipynb
docs/source/content/: 00_Installation.rst  01_Basic_Usage.rst  03_References.rst
notebooks/: stereo_seq_mouse_brain_hi-res.ipynb
resource/: lr_network_human.csv  lr_network_mouse.csv
simulation/: GRN_parameter_100.csv  GRN_params_non_spatial.csv  GRN_params_spatial.csv  LR_parameter_100.csv
spagrn/: __init__.py  auprc.py  auprc_script.py  auroc.py  autocor.py  c_autocor.py  compare_gene.py  corexp.py  filter_modules.py  g_autocor.py  gis.py  gis_og.py  m_autocor.py  main.py  network.py  params.py  plot.py  receptor_auc.py  receptor_simulation.py  receptors.py  regulatory_network.py  results.py  run_hotspot.py  scoexp.py  simulation.py  simulation_with_noise.py  simulator.py  spa_logger.py  test.py  ts.py
spagrn/benchmark/: genie3.sh  receptor_simulation.py  run_hotspot.py  simulation_replicates.py  simulation_replicates_subset.py
spagrn/cli/: spagrn.py  spagrn_parser.py
spatialGRN/: plot.py  regulatory_network.py  spa_logger.py  test.py
src/: auprc.py  network.py  regulatory_network.py
src/benchmark/: receptor_results.py  run_hotspot.py
src/spagrn/: c_autocor.py  corexp.py  g_autocor.py  m_autocor.py  plot.py  regulatory_network.py  simulator.py
src/spagrn/cli/: __init__.py  spagrn_parser.py
test/: auc.csv  meta_mousebrain.csv  old_README.md  regulons.json  test_grn_MouseBrainCellbin.h5ad  test_mm_mgi_tfs.txt
