[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "spagrn"
version = "1.0.7"
authors = [
    {name = "Yao LI", email = "liyao1@genomics.cn"},
]
description = "A comprehensive tool to infer TF-centred, spatial gene regulatory networks for the spatially resolved transcriptomic data."
readme = README.md
requires-python = ">=3.8, <3.9"
license = "GPL-3.0-or-later"
classifiers=[
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["spagrn"]
