[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "spagrn"
version = "1.1.4"
authors = [
    {name = "Yao LI", email = "liyao1@genomics.cn"},
]
description = "A comprehensive tool to infer TF-centred, spatial gene regulatory networks for the spatially resolved transcriptomic data."

requires-python = ">=3.8, <3.9"
license = { file = "GPL-3.0-or-later" }
classifiers=[
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: OS Independent",
]

dependencies = [
	"anndata>=0.8.0,<0.9", 
	"pandas<2.0.0,>=1.3.4", 
	"scanpy>=1.9.1,<1.9.4", 
	"seaborn<0.13", 
	"matplotlib<=3.5.3", 
	"pyscenic==0.12.1", 
	"hotspotsc==1.1.1", 
	"scipy", 
	"numpy<1.24,>=1.16.6", 
	"dask", 
	"arboreto", 
	"ctxcore>=0.2.0", 
	"scikit-learn",
	"esda",
	"pysal"
]

[tool.setuptools]
packages = ["spagrn", "spagrn.cli"]

[project.scripts]
spagrn = "spagrn.cli.spagrn_parser:main"
